[package]
name = "pyqmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyqmc"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.14.0"
lazy_static = "1.5.0"
pyo3 = "0.25.0"
tc_tea = "0.2.1"
thiserror = "2.0.16"
umc_utils = { path = "./src/utils" }